apps/music/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: music
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: music
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9696
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: prowlarr
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: music
  labels:
    app.kubernetes.io/name: flaresolverr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8191
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: flaresolverr
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: music
  labels:
    app.kubernetes.io/name: lidarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8686
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: lidarr
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: music
  labels:
    app.kubernetes.io/name: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4533
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: navidrome
